Fixed footer alignment bug

--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -129,6 +129,9 @@
 }
 
 .footer-copyright {
+	&:before {
+		clear: both;
+	}
 	width: 100%;
 	text-align: center;
 	color: @footer-theme-text;
